k8s-test-postgres-pod.yaml
# Test pod to verify Postgres database restoration
# This pod will connect to the Postgres database and run a test query
apiVersion: v1
kind: Pod
metadata:
  name: postgres-test
  namespace: equal-risk
spec:
  restartPolicy: Never
  containers:
    - name: test
      image: postgres:17
      command:
        - /bin/bash
        - -c
        - |
          [...]
